[gd_scene load_steps=5 format=3 uid="uid://dpj7ntmoispqo"]

[ext_resource type="Script" path="res://Scenes/Main_Menu.gd" id="1_a00rb"]
[ext_resource type="Texture2D" uid="uid://dcuyte771hik8" path="res://Scripts/UI/360_F_480129384_xkBXyTdVt1R5F7KBwTD2kDURi7hV97Ad.jpg" id="2_2e8lf"]

[sub_resource type="SystemFont" id="SystemFont_xsixc"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_rkkaw"]
font_names = PackedStringArray("Impact")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main_Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a00rb")

[node name="TextureRect" type="TextureRect" parent="Main_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2e8lf")

[node name="MarginContainer" type="MarginContainer" parent="Main_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="Main_Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Main_Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.596062, 0.29277, 0.51593, 1)
theme_override_colors/font_outline_color = Color(0.835294, 0, 0.815686, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_xsixc")
theme_override_font_sizes/font_size = 64
text = "CARBONBUSTERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main_Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Menu/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Seperator2" type="Control" parent="Main_Menu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="Main_Menu/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_rkkaw")
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="Seperator3" type="Control" parent="Main_Menu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Tutorial_Button" type="Button" parent="Main_Menu/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_rkkaw")
theme_override_font_sizes/font_size = 24
text = "Tutorial"

[node name="Seperator4" type="Control" parent="Main_Menu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Exit_Button" type="Button" parent="Main_Menu/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_rkkaw")
theme_override_font_sizes/font_size = 24
text = "Exit"
